--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "iview": "^3.2.1",
+    "element-ui": "^2.4.11",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2"
   },
@@ -16,7 +16,7 @@
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
-    "ajv": "^5.0.0",
+    "ajv": "^5.5.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
